# dist-demo

./: Cargo.toml
.github/workflows/: release.yml
apps/bar/: Cargo.toml
apps/foo/: Cargo.toml
