[workspace]

members = [
    "apps/*",
]

[workspace.dependencies]
axum = "^0.6.7"   # http framework
tower = "^0.4.13"   # middleware
tower-http = "^0.4.0"   # middleware
reqwest = "^0.11.12"   # http client
hyper = "^0.14"   # low-level http library
serde = "^1.0.152"   # serialization library
serde_json = "^1.0.91"  # serialization library
tokio = "^1"   # async runtime
tracing = "^0.1.37"  # logging
tracing-subscriber = "^0.3"  # logging
metrics = "^0.20.1"
metrics-exporter-prometheus = "^0.11.0"
sentry = "^0.30.0"
sentry-tracing = "^0.30.0"
sentry-contexts = "^0.30.0"
utoipa = "^3" # openapi
utoipa-swagger-ui = "^3"  # openapi
dotenvy = "^0.15.6"  # .env loading
bytes = "^1.4.0"
anyhow = "^1.0.68"  # error handling
nanoid = "^0.4.0"  # short unique ids
redis = "^0.22.1"
bb8-redis = "^0.12.0"  # redis connection pool
chrono = { version = "^0.4", default_features = false }
url = "2.3.1"
tonic = "^0.8.3"  # grpc
tonic-build = "^0.8.4"  # grpc
tonic-health = "^0.8.0"  # grpc
prost = "^0.11.6"  # protobuf support
clap = "^4.1.4"
tokio-util = "0.7.4"
k8s-openapi = "^0.17.0"
futures = "^0.3.17"
crossterm = "0.26.0"
kube-client = "0.79.0"
kube = "0.79.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
