[package]
name = "foo"
version = "0.1.2"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
kube = { workspace = true, features = ["runtime", "ws", "derive"] }
kube-client.workspace = true
crossterm.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "io-std", "rt-multi-thread"] }
k8s-openapi = { workspace = true, features = ["v1_24", "api"] }
tokio-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
schemars = "^0.8.11"
dialoguer = "0.10.3"
cli-clipboard = "0.4.0"
