[package]
name = "foo"
version = "0.1.4"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.4", features = ["derive", "env"] }
kube = { version =  "0.79.0", features = ["runtime", "ws", "derive"] }
kube-client = "0.79.0"
crossterm =  "0.26.0"
futures = "^0.3.17"
anyhow = "^1.0.68"
tracing = "^0.1.37"  # logging
tracing-subscriber = "^0.3"  # logging
tokio = { version = "^1", features = ["macros", "io-std", "rt-multi-thread"] }
k8s-openapi = { version = "^0.17.0", features = ["v1_24", "api"] }
tokio-util = "0.7.4"
serde = { version = "^1.0.152", features = ["derive"] }
serde_json =  "^1.0.91"
reqwest = { version = "^0.11.12", features = ["json"] }
schemars = "^0.8.11"
dialoguer = "0.10.3"
cli-clipboard = "0.4.0"
