[package]
name = "foo"
version = "0.1.5"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.4", features = ["derive", "env"] }
kube = { version =  "0.79.0", features = ["runtime", "ws", "derive"] }
kube-client = "0.79.0"
crossterm =  "0.26.0"
futures = "^0.3.17"
anyhow = "^1.0.68"
tracing = "^0.1.37"  # logging
tracing-subscriber = "^0.3"  # logging
tokio = { version = "^1", features = ["macros", "io-std", "rt-multi-thread"] }
k8s-openapi = { version = "^0.17.0", features = ["v1_24", "api"] }
